--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,33 @@
  *= require_self
  *= require_tree .
  */
+
+body {
+  font-size: 16px;
+}
+
+.header {
+  background-color: darkblue;
+  position: relative;
+}
+
+.header .star {
+  position: absolute;
+}
+
+.header .logo {
+  position: relative;
+  padding: 20px 90px;
+  font-size: 7.7em;
+  font-weight: 600;
+  display: inline-block;
+}
+
+.header .tagline {
+  top: -25px;
+  left: 50px;
+  position: relative;
+  display: inline-block;
+  font-size: 1.5em;
+  color: white;
+}
