--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -1,5 +1,11 @@
-%p bff test.
-%p who is your best friend?
+.header
+  .star
+    :erb
+      <svg height="210" width="520">
+        <polygon points="120,10 160,40 195,8 225,37 260,10 330,45 360,2 400,45 435,10 465,40 520,50 485,90 510,110 485,130 460,165 435,150 400,175 365,145 320,170 275,155 220,170 180,145 145,175 110,155 60,140 80,110 50,85 75,65 45,45 70, 35" style="fill:white;stroke:black;stroke-width:3" />
+      </svg>
+  .logo Bff test
+  .tagline who is your best friend?
 %p take the test.
 %p spin the wheel.
 %p what is your favorite color?
