--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,15 @@
 <html>
 <head>
   <title>BffTest</title>
+  <%= stylesheet_link_tag    "http://yui.yahooapis.com/3.14.1/build/cssreset/cssreset-min.css", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <div id="container">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
